--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 <body>
 
-<h1> Ubi </h1>
-<h2> Ubi is a advanced discord bot, that can DJ your servers, moderate your channes, and even play board games!
+<h1 style="color:red">Ubi</h1>
+
+<h2> Ubi is a advanced discord bot, that can DJ your servers, moderate your channe, and even play board games!
  </h2>
  
  <p2> Note, that this website for Ubi is temporary. </p2>
- 
- 
