added a few things
- refer
- main page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 
 <h1 style="color:red">Ubi</h1>
 
-<h2> Ubi is a advanced discord bot, that can DJ your servers, moderate your channe, and even play board games!
+<h2> Ubi is a advanced discord bot, that can DJ your servers, moderate your channels, and even play board games!
  </h2>
  
  <p2> Note, that this website for Ubi is temporary. </p2>
+ 
+	<!--- Just for reference reasons 
+ > Ubi was created by @EncloCreations and @Laphatize <
+> This is meant for the website <
+> ubi logo is copyrighted
+---!>
+
