--- a/website/ubi.github.io/index.html
+++ b/website/ubi.github.io/index.html
@@ -7,9 +7,9 @@
  </h2>
  
  <p2> Note, that this website for Ubi is temporary. </p2>
- 
+ <button type="button">Get Ubi!!</button>
 	<!--- Just for reference reasons 
  > Ubi was created by @EncloCreations and @Laphatize <
 > This is meant for the website <
 > ubi logo is copyrighted
------>
+--->
